# OnlineAlignment

./: .gitignore  README.md  __init__.py  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
alignment/: noa.py  oltw.py  online_alignment.py
core/: constants.py
core/alignment/: utils.py
core/alignment/offline/: __init__.py  oltw.py
core/cost/: __init__.py  cosine.py  cost_metric.py  euclidean.py  lpnorm.py  manhattan.py  registry.py
online_alignment/: __init__.py  constants.py
online_alignment/alignment/: __init__.py  base.py  utils.py
online_alignment/alignment/offline/: __init__.py  noa.py  oltw.py
online_alignment/alignment/online/: noa.py
online_alignment/cost/: cosine.py  cost_metric.py  euclidean.py  lpnorm.py  manhattan.py  numerical.py  registry.py
online_alignment/features/: base.py  offline.py  online.py
scripts/: time_oltw.py
tests/core/alignment/offline/: test_noa.py  test_oltw.py
tests/core/cost/: test_cosine.py  test_cost_metric.py  test_euclidean.py  test_lpnorm.py  test_manhattan.py  test_registry.py
utils/backend/: __init__.py
utils/backend/cost_handling/: _build_cost_reference.py  cost_handling.py
